# ittech

./: .gitattributes  .gitignore  Cargo.toml  ITTECH.txt  README.md
examples/: dump.rs  render.rs
src/: data.rs  error.rs  hl.rs  lib.rs  ll.rs  main.rs  parser.rs  writer.rs
src/data/: active_channels.rs  channel.rs  envelope.rs  instrument.rs  module.rs  pattern.rs  sample.rs  util.rs
src/parser/: pattern.rs  scan.rs  util.rs
tests/: .gitignore  effect_alphabet.it  song_message.it
tests/compression/: compressed.iti  sample_16.raw  sample_8.raw
