[package]
name = "ittech"
version = "0.1.0"
authors = []
edition = "2018"

description = "Impulse Tracker file parser and writer"
readme = "README.md"
homepage = "https://github.com/ametisf/ittech"
repository = "https://github.com/ametisf/ittech"
license = "GPL-3.0-or-later"

[dependencies]
bitflags = "1.2"
nom = "6.0"

[dev-dependencies]
anyhow = "1.0"
wav = { git = "https://github.com/ametisf/wav", branch = "main" }
pretty_assertions = "0.6"
