[package]
name = "ittech"
version = "0.3.0"
authors = []
edition = "2018"

description = "Impulse Tracker file parser and writer"
readme = "README.md"
homepage = "https://github.com/ametisf/ittech"
documentation = "https://docs.rs/ittech"
repository = "https://github.com/ametisf/ittech"
license = "GPL-3.0-or-later"

[dependencies]
bitflags = "1.2"
nom = "7.0"
tracing = { version = "0.1", default-features = false, features = ["std"], optional = true }

[features]
log = ["tracing/log"]

[dev-dependencies]
anyhow = "1.0"
wav = { git = "https://github.com/pr2502/wav", branch = "main" }
pretty_assertions = "0.6"
